# eventhorizon

./: .gitignore  .postman.json  IMPROVED_DESIGN.md  README.md  check-markets.js  debug-db.js  deploy_out_new.txt  diff.txt  eslint.config.mjs  fix-titles.js  instrumentation.ts  integration-checkpoint-report.md  lint_final_final.txt  lint_output.txt  lint_output_final.txt  lint_output_v2.txt  new_errors.txt  next.config.ts  package-lock.json  package.json  prisma.config.ts  proxy.ts  render.yaml  seed.js  seed_out.txt  skills-lock.json  test-conn.js  test.css  tmp_script.py  vitest.config.ts
agent/: README.md  config.py  main.py  pyproject.toml  requirements.txt
agent/agents/: __init__.py  image_searcher.py  market_creator.py  market_resolver.py  topic_discovery.py
agent/schemas/: __init__.py  market.py
agent/tools/: __init__.py  nextjs_tool.py  pexels_tool.py  serp_tool.py
app/: globals.css  layout.tsx  page.tsx
circuit/: autopay.circom  autopay.r1cs  autopay.sym  autopay_0000.zkey  autopay_0001.zkey  build_all.ps1  escrow_deposit.circom  package-lock.json  package.json  pot12_0001.ptau  reveal_0000.zkey  reveal_bet.circom  reveal_bet.r1cs  reveal_bet.sym  reveal_vkey.json  seal_0000.zkey  seal_bet.circom  seal_bet.r1cs  seal_bet.sym  seal_vkey.json  setup.ps1  setup_market.ps1  verification_key.json
components/: AppLayout.tsx  BetManagementTable.tsx  BetModal.tsx  CreateMarketModal.tsx  DisputeModal.tsx  EditProfileModal.tsx  EscrowModal.tsx  HeroUI.tsx  IntelligenceDashboard.tsx  LaunchDashboard.tsx  LenisProvider.tsx  MarketChart.tsx  MarketsGrid.tsx  (+9 more)
(+177 files in other folders)
