# agent/pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gravityflow-agent"
version = "0.1.0"
description = "GravityFlow autonomous market creation and resolution agent"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "google-search-results>=2.4.2",   # SerpAPI
    "schedule>=1.2.2",                # Job scheduling
    "supabase>=2.5.0",
    "rich>=13.7.0",                   # Pretty logging
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
agent = "main:main"
